[gd_scene load_steps=17 format=3 uid="uid://ckmxcyuy7jenn"]

[ext_resource type="Script" path="res://world/world.gd" id="1_jf2b5"]
[ext_resource type="Texture2D" uid="uid://oro8upcigrmg" path="res://world/textures/Ground.png" id="2_jvdgo"]
[ext_resource type="Texture2D" uid="uid://um74u2h4umbh" path="res://world/textures/Water.webp" id="3_8l4e4"]
[ext_resource type="Texture2D" uid="uid://c2fnemhmva7fn" path="res://world/textures/Tree.png" id="3_dyx3i"]
[ext_resource type="Texture2D" uid="uid://bjfeg3bcywstf" path="res://world/textures/Rocks.png" id="4_qatps"]
[ext_resource type="Script" path="res://world/borders.gd" id="5_33q26"]
[ext_resource type="Script" path="res://world/tilemap.gd" id="5_bikga"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_pkv3c"]
resource_name = "ground"
texture = ExtResource("2_jvdgo")
texture_region_size = Vector2i(34, 34)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_1/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_1/angular_velocity = 0.0
0:0/0/custom_data_0 = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_24aw2"]
resource_name = "water"
texture = ExtResource("3_8l4e4")
texture_region_size = Vector2i(34, 34)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_1/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_1/angular_velocity = 0.0
0:0/0/physics_layer_1/polygon_0/points = PackedVector2Array(-17, -17, 17, -17, 17, 17, -17, 17)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_hwolf"]
resource_name = "tree"
texture = ExtResource("3_dyx3i")
texture_region_size = Vector2i(34, 34)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12.25, -14.5, 13, -14.75, 12, 14, -15, 14.25)
0:0/0/physics_layer_1/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_1/angular_velocity = 0.0
0:0/0/custom_data_1 = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_65sq4"]
resource_name = "rock"
texture = ExtResource("4_qatps")
texture_region_size = Vector2i(34, 34)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8.75, -12.5, 11.75, -10.5, 14.5, 8.75, -13.25, 13)
0:0/0/physics_layer_1/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_1/angular_velocity = 0.0
0:0/0/custom_data_1 = true

[sub_resource type="TileSet" id="TileSet_djg3t"]
tile_size = Vector2i(34, 34)
physics_layer_0/collision_layer = 1
physics_layer_0/collision_mask = 0
physics_layer_1/collision_layer = 2
physics_layer_1/collision_mask = 0
custom_data_layer_0/name = "spawnable"
custom_data_layer_0/type = 1
custom_data_layer_1/name = "breakable"
custom_data_layer_1/type = 1
sources/0 = SubResource("TileSetAtlasSource_pkv3c")
sources/3 = SubResource("TileSetAtlasSource_65sq4")
sources/2 = SubResource("TileSetAtlasSource_hwolf")
sources/1 = SubResource("TileSetAtlasSource_24aw2")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ofkf6"]
size = Vector2(2, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_emt17"]
size = Vector2(2, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oq2da"]
size = Vector2(2, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ukay7"]
size = Vector2(2, 2)

[node name="World" type="Node2D"]
script = ExtResource("1_jf2b5")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_djg3t")
format = 2
script = ExtResource("5_bikga")

[node name="Borders" type="StaticBody2D" parent="."]
visible = false
script = ExtResource("5_33q26")

[node name="TopBorder" type="CollisionShape2D" parent="Borders"]
scale = Vector2(1e-05, 1e-05)
shape = SubResource("RectangleShape2D_ofkf6")

[node name="LeftBorder" type="CollisionShape2D" parent="Borders"]
scale = Vector2(1e-05, 1e-05)
shape = SubResource("RectangleShape2D_emt17")

[node name="BottomBorder" type="CollisionShape2D" parent="Borders"]
scale = Vector2(1e-05, 1e-05)
shape = SubResource("RectangleShape2D_oq2da")

[node name="RightBorder" type="CollisionShape2D" parent="Borders"]
scale = Vector2(1e-05, 1e-05)
shape = SubResource("RectangleShape2D_ukay7")
